--- a/styles/module.css
+++ b/styles/module.css
@@ -1,9 +1,7 @@
 #about {
   text-align: center;
-  /*margin-top: 10px;*/
   max-width: 100%;
-  padding-bottom: 2px;
-
+  padding-bottom: 3px;
 }
 
 /*set image to percentage*/
